challenge3/force-app/main/default/objects/Animal__c/Animal__c.object-meta.xml
<CustomObject>
    <label>動物</label>
    <nameField>
        <label>動物名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>