challenge3/force-app/main/default/objects/Animal__c/fields/Endangered__c.field-meta.xml
<CustomField>
    <fullName>Endangered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>絶滅危惧種</label>
    <type>Checkbox</type>
</CustomField>