challenge3/force-app/main/default/objects/Animal__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>画像</label>
    <type>Url</type>
</CustomField>